[package]
name = "tokio-stream-chunks-within"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-core = "0.3.21"
futures-util = "0.3.21"
pin-project-lite = "0.2.9"
tokio = { version = "1.18.2", features = ["full"] }

[dev-dependencies]
futures = { version = "0.3", default-features = false }
tokio = { version = "1.18", features = ["macros", "time", "test-util", "rt-multi-thread"] }
tokio-test = "0.4"
